[package]
name = "parser_3000"
version = "0.1.0"
authors = ["Human"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rusqlite]
version = "0.24.2"
features = ["bundled"]

[dependencies]
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14", features = ["full"] }
chrono = "0.4.19"
lazy_static = "1.4.0"
dashmap = "4.0.1"
scraper = "0.12.0"